Enhance research.ipynnb

--- a/research.ipynb
+++ b/research.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a36d433f",
+   "metadata": {},
+   "source": [
+    "# UrbanEcho\n",
+    "\n",
+    "Welcome to one of my many ML classifier projects, **UrbanEcho**. The goal of this is to classify the input sound (`.wav` file) which is provided by the user into 10 distinct classes. \n",
+    "\n",
+    "In this notebook, I have tried to show you my thought process. This is the notebook where I first wrote the code, tested it, evaluated and compared it's raw performance. Then, I copy-pasted it to `fit.py`. I have also included some plots (Learning Curve, Heatmap of principle components etc.) to visualize the feature space.\n",
+    "\n",
+    "I hope you will like it !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c08cd83",
+   "metadata": {},
+   "source": [
+    "## Importing Modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "613c4aa3",
@@ -29,6 +51,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0243f9ca",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52706652",
+   "metadata": {},
+   "source": [
+    "Importing the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "0cc52e75",
@@ -36,6 +74,14 @@
    "outputs": [],
    "source": [
     "df_raw = pd.read_csv(\"datasets/extracted_audio_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c09f3b3",
+   "metadata": {},
+   "source": [
+    "Checking for null values"
    ]
   },
   {
@@ -62,6 +108,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26b96725",
+   "metadata": {},
+   "source": [
+    "No null values were found. So, we are going to skip `df.dropna()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef628278",
+   "metadata": {},
+   "source": [
+    "Printing the shape of the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "c840cde1",
@@ -80,6 +142,14 @@
    ],
    "source": [
     "df_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd61ad8",
+   "metadata": {},
+   "source": [
+    "Fetching column names (including target column)"
    ]
   },
   {
@@ -110,6 +180,14 @@
    "source": [
     "column_names = df_raw.columns\n",
     "column_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31fa08b9",
+   "metadata": {},
+   "source": [
+    "Analyzing class balance"
    ]
   },
   {
@@ -145,6 +223,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a75d577",
+   "metadata": {},
+   "source": [
+    "Separating feature and target columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "a675fe00",
@@ -153,6 +239,14 @@
    "source": [
     "x = df_raw.iloc[:,:-1]\n",
     "y_nacoded = df_raw.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "131bf5e3",
+   "metadata": {},
+   "source": [
+    "Encoding target column "
    ]
   },
   {
@@ -186,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b46179f",
+   "metadata": {},
+   "source": [
+    "Converting to numpy array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "67a344ba",
@@ -194,6 +296,22 @@
    "source": [
     "feature_names = x.columns\n",
     "x = x.to_numpy()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71c69925",
+   "metadata": {},
+   "source": [
+    "## Model development"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "063c3c94",
+   "metadata": {},
+   "source": [
+    "Performing train-test split"
    ]
   },
   {
@@ -206,6 +324,14 @@
     "x_train,x_test,y_train,y_test = train_test_split(\n",
     "  x,y,test_size=1/3,shuffle=True,random_state=14,stratify=y\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9255af85",
+   "metadata": {},
+   "source": [
+    "Defining base models and the pipelines"
    ]
   },
   {
@@ -228,6 +354,14 @@
     "  (\"pca\",PCA(random_state=192)),\n",
     "  (\"model\",rf_model)\n",
     "])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f4460d",
+   "metadata": {},
+   "source": [
+    "Performing RandomizedSearchCV and fetching the attributes"
    ]
   },
   {
@@ -284,6 +418,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24afc8f0",
+   "metadata": {},
+   "source": [
+    "The best configuration found by RandomizedSearchCV is as following:\n",
+    "```python\n",
+    "rf_model = RandomForestClassifier(n_estimators=900,\n",
+    "  max_depth = 20, class_weight = \"balanced\", random_state = 92\n",
+    ")\n",
+    "pca = PCA(n_components=29)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5063f046",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a8ebc4d",
+   "metadata": {},
+   "source": [
+    "Printing **Classification Report**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "5bcc232b",
@@ -317,6 +481,30 @@
     "y_true = y_test\n",
     "y_pred = gs.predict(x_test)\n",
     "print(classification_report(y_true=y_true,y_pred=y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d033bd5",
+   "metadata": {},
+   "source": [
+    "Seems like we have done a pretty good job developing our model. The **f1-score** look really promising. Let's hope it stays this way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08108ead",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "799c87a6",
+   "metadata": {},
+   "source": [
+    "Calculating the **components** dataframe"
    ]
   },
   {
@@ -485,6 +673,14 @@
     "after_pca = pipe_best.named_steps[\"pca\"]\n",
     "comps = pd.DataFrame(data=after_pca.components_,columns=feature_names,index=[f\"PC{i+1}\" for i in range(after_pca.n_components_)])\n",
     "comps.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1227f0c",
+   "metadata": {},
+   "source": [
+    "Calculating **PCA loading** dataframe"
    ]
   },
   {
@@ -657,6 +853,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b387e515",
+   "metadata": {},
+   "source": [
+    "Creating the heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "512efd15",
@@ -684,6 +888,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9af5f95f",
+   "metadata": {},
+   "source": [
+    "This **PCA loadings heatmap** visualizes the relationship between **29 Principal Components (PC1-PC29)** and numerous features, categorized into **MFCCs**, **Chroma** features, and **Spectral/Zernike** features. **PC1 and PC2** are heavily weighted by the first few **MFCCs** and the final **ZernikeCentering** feature (positive 0.77), while also showing strong negative correlations with **Chroma 8** (-0.71) and **SpectralContrast\\_7** (-0.75). Notably, the **top 6 PCs** capture the most structure, as loadings for PCs **PC7 through PC29** are generally very close to zero, suggesting that **29 components** may be excessive for explaining the dataset's variance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04886d35",
+   "metadata": {},
+   "source": [
+    "Creating **Learning Curve**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "beede2a3",
@@ -694,6 +914,14 @@
     "  pipe_best,x_train,y_train,train_sizes=np.linspace(0.1,1.0,10),\n",
     "  cv=10,n_jobs=-1,shuffle=True,random_state=57\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a79e984",
+   "metadata": {},
+   "source": [
+    "Plotting it"
    ]
   },
   {
@@ -737,6 +965,14 @@
     "plt.grid()\n",
     "plt.ylim(0.5,1.2)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68664063",
+   "metadata": {},
+   "source": [
+    "This **learning curve** shows a model that is **well-fit** to the data after LDA and PCA preprocessing. The **Training Accuracy** is nearly perfect ($1.00$), while the **Validation Accuracy** is consistently high ($\\approx 0.91$), resulting in a **small gap ($\\approx 0.9$)**. This pattern confirms **low bias** and **minimal variance/overfitting**, indicating the dimensionality reduction (LDA) was effective for this Random Forest classifier. "
    ]
   }
  ],
